# cudaResize

./: CMakeLists.txt  README.md  cuda_utils.hpp  main.cpp  resize.cu  resize.hpp
